# Generated by Django 4.0.4 on 2022-05-02 19:32

import datetime
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='ItemCondition',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=200)),
            ],
        ),
        migrations.CreateModel(
            name='ItemsSalesType',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=200)),
                ('buyItNow', models.BooleanField(default=False)),
                ('auction', models.BooleanField(default=True)),
            ],
        ),
        migrations.CreateModel(
            name='Items',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('price_minimum', models.FloatField(default=0)),
                ('price_fixed', models.FloatField(null=True)),
                ('name', models.CharField(max_length=200)),
                ('Description', models.CharField(max_length=10000)),
                ('show_in_catalog', models.BooleanField(default=False)),
                ('date_ends', models.DateTimeField(null=True)),
                ('created', models.DateTimeField(default=datetime.datetime(2022, 5, 2, 19, 32, 52, 984593))),
                ('edited', models.DateTimeField(default=datetime.datetime(2022, 5, 2, 19, 32, 52, 984593))),
                ('Condition', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='items.itemcondition')),
                ('sale_type', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='items.itemssalestype')),
            ],
        ),
    ]
